fix overflow of file upload list

--- a/style/base/fine-uploader.scss
+++ b/style/base/fine-uploader.scss
@@ -64,7 +64,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    max-height: 450px;
+    max-height: 400px;
     overflow-y: auto;
     box-shadow: 0px 1px 0px rgba(15, 15, 50, 0.14);
     clear: both;
